Diseño de la página de Login, primeros archivos SCSS, colores, margenes, botones y componentes.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,10 @@
+@import './bases/_bases.scss';
+@import './bases/_settings.scss';
+
+// Components
+@import './components/auth';
+@import './components/buttons';
+
 html, body {
-    background-color: blue;
+    background-color: $primary;
 }
