SCSS página de register.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 // Components
 @import './components/auth';
 @import './components/buttons';
+@import './components/links';
 
 html, body {
     background-color: $primary;
