--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './components/auth';
 @import './components/buttons';
 @import './components/links';
+@import './components/journal';
 
 html, body {
     background-color: $primary;
