--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -10,6 +10,12 @@
     &:focus {
         outline: none;
     }
+
+    transition: color .3s ease;
+
+    &:hover {
+        color: darken($color: white, $amount: 10);
+    }
 }
 
 .btn-primary {
