--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,8 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/journal';
+@import './components/nothing';
+@import './components/notes';
 
 html, body {
     background-color: $primary;
