Privatización de rutas y redirecciones corregidas. Estilos de Spinner.

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -24,9 +24,13 @@
 
     &:disabled {
         background-color: lighten($color: $primary, $amount: 15);
+
+        &:hover {
+            cursor: default;
+        }
     }
 
-    &:hover {
+    &:hover:enabled{
         background-color: darken($color: $primary, $amount: 20);
     }
 }
