--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './components/journal';
 @import './components/nothing';
 @import './components/notes';
+@import './components/spinners';
 
 html, body {
     background-color: $primary;
